Delete search index in an indexing task